--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.studio-manager</groupId>
 	<artifactId>fitness-bookings-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>fitness-bookings-api</name>
 	<description>Demo project for Spring Boot</description>
 
